2008-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (s3_device_read_label): Don't set
	  volume_header if nothing is read.

2008-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c: Don't log is flag is DEVICE_STATUS_SUCCESS.

2008-06-27  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/tape-posix.c: return DEVICE_ERROR|DEVICE_BUSY on EIO
	* changer-src/chg-lib.sh.in: keep waiting for a device if it *might*
	  be busy or offline

2008-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Use local start_time variable.
	* application-src/amgtar.c: Use local start_time variable.
	* common-src/clock.h: Remove times_zero and start_time extern.
	* common-src/clock.c: Remove times_zero.

2008-06-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Don't send encryption in xml req packet for
				 server encryption.

2008-06-25  Dustin J. Mitchell <dustin@zmanda.com>
	* application-src/amgtar.c: revert --atime-preserve change

2008-06-22  Dustin J. Mitchell <dustin@zmanda.com>
	* application-src/amgtar.c: change --atime-preserve=system to
	  --atime-preserve

2008-06-20  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amdump.pl: fix checks to refresh the test configuration

2008-06-20  Dustin J. Mitchell <dustin@zmanda.com>, Ian Turner <ian@zmanda.com>
	* server-src/amdump.sh: correctly handle error exits from planner
	* server-src/planner.c: fail if planning fails
	* installcheck/amdump.pl: test changes

2008-06-20 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: typo amanda-devices.7.gz

2008-06-20 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: added %{MANDIR}/man7/amanda-device.7.gz

2008-06-20  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Call check_access() only
				    if getuid() == geteuid().
	* application-src/amgtar.c: check_dir(argument->dle.device, R_OK)
